assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&family=Righteous&display=swap');

/* General Styles */

* {
    margin: 0;
    padding: 0;
}

body {
    background-color: #fff;
}

.inline {
    display: inline;
}

.text-centre {
    text-align: center;
}

.inline-block {
    display: inline-block;
}

h1,
h2,
h3 {
    font-family: 'Righteous', sans-serif;
}

p,
button {
    font-family: 'Raleway', sans-serif;
}

/* Start/Restart Game Buttons */

.btn-game-main {
    padding: 5px 20px;
    border-radius: 10px;
    border: none;
    font-size: 16px;
    box-shadow: inset 1px 0px 3px 1px rgba(0, 0, 0, 0.15);
}

#start-game-btn {
    font-weight: 500;
    background-color: #FC7070;
    color: white;
}

#restart-game-btn,
#start-again-btn {
    font-weight: 400;

}

#restart-game-btn {
    font-weight: 400;
    background-color: #d1d1d1;
}

#start-again-btn {
    background-color: #FCADAD;
}

#restart-button-div,
#start-again-button-div {
    margin-top: 60px;
}



/* Background */

#background-div {
    background: linear-gradient(180deg, #AAE2FF 0.01%, #FBFBFB 70%);
    max-width: 1300px;
    margin: 0 auto;
    position: absoloute;
}


/* Logo */

#logo-div {
    display: flex;
    justify-content: center;
}

#logo-div img {
    width: 220px;
    margin-top: 50px;
}


/* Footer */

#test-div {
    background-color: aquamarine;
    height: 500px;
    width: 100%;
}

#cloud-div {
    height: 350px;
    background-image: url("../images/clouds_lrg.png");
    background-position: center bottom;
    background-repeat: no-repeat;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    position: relative;
    bottom: 0px;
    width: 100%;
    max-width: 1300px;
}


#footer-text {
    position: absolute;
    bottom: 20px;
    width: 100%;

}

#footer-text p a {
    text-decoration: none;
    color: black;
    padding-left: 5px;
    transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -webkit-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
}

#footer-text p a:hover {
    color: #FC7070;
}


/* Welcome Page */

#welcome-div {
    width: 70%;
    max-width: 600px;
    margin: 0 auto;
    margin-top: 60px;
}

#welcome-div h1 {
    font-size: 36px;
    margin-bottom: 30px;
}

#start-button-div {
    margin: 60px 0;
}




/* Game */

#progress-div {
    margin: 0 auto;
    margin-top: 50px;
    width: 400px;
    position: relative;
    padding-bottom: 50px;
}

#progress-text {
    margin-bottom: 15px;
    text-align: left;
}

.progressbar {

    height: 15px;
    border-radius: 20px;
    position: absolute;
}

#progressbar-bg {
    width: 100%;
    background-color: #F7F0F0;
}

#progressbar-fg {
    background-color: #FCADAD;
    z-index: 2;
    width: 10%;
}

#question-text {
    font-weight: 500;
    font-size: 26px;
    margin-bottom: 40px;
    padding: 0 25px;
}

#answer-div {
    width: 70%;
    max-width: 960px;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    row-gap: 20px;
}

.btn-choice {
    background-color: #4D93BB;
    color: white;
    font-size: 16px;
    font-weight: 500;
    width: 48%;
    height: 90px;
    padding: 18px 20px;
    border: none;
    box-shadow: 2px -2px 4px 2px rgba(0, 0, 0, 0.15);
    border-radius: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-color 0.25s ease-in-out;
    -moz-transition: background-color 0.25s ease-in-out;
    -webkit-transition: background-color 0.25s ease-in-out;
    -o-transition: background-color 0.25s ease-in-out;
}

.btn-choice:hover {
    background-color: #407694;
}





/* Results Page */

#personality-div,
#country-map-div {
    background-color: white;
}

#country-info-div {
    background-color: #AEE2FF;
}

#country-highlights-div {
    background-color: #407694;
}

.results-container {
    box-shadow: 2px 0px 8px rgba(0, 0, 0, 0.15);
}

#personality-div,
#country-highlights-div,
#country-info-div {
    margin-left: 100px;
    margin-right: 100px;
}

#personality-div,
#country-info-div {
    margin-top: 60px;
}

#personality-div {
    padding: 40px;
}

#country-info-div,
#country-highlights-div {
    padding: 50px 40px;
}

#personality-div,
#country-map-div {
    border-radius: 24px;
}

#personality-heading {
    font-size: 36px;
    margin-bottom: 40px;
}

#personality-div-flex {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    justify-content: space-between;
    column-gap: 20px;
}

#personality-text-div,
#personality-stats-div {
    width: 48%;
}

#stats-key-chart-div {
    margin-top: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
    column-gap: 15px;

    flex-wrap: wrap;
    row-gap: 15px;

}

#personality-stats-div h3 {
    font-size: 16px;
}

.stat-key-div {
    display: flex;
    justify-content: start;
    margin-bottom: 6px;
    text-transform: uppercase;
    min-width: 175px;
}

#pie-numbers {
    font-size: 13px;
    justify-self: flex-end;
}

.stat-percent {
    font-weight: 600;
}

.stat-key {
    width: 15px;
    height: 15px;
    border-radius: 5px;
    margin-right: 5px;
    aspect-ratio: 1;
}

#stat-key-1 {
    background-color: #FFE55A;
}

#stat-key-2 {
    background-color: #9EE58C;
}

#stat-key-3 {
    background-color: #E7A7F1;
}

#stat-key-4 {
    background-color: #FFC289;
}

#stat-key-5 {
    background-color: #ACAAFF;
}

#stat-key-6 {
    background-color: #FDA18D;
}

#pie-chart {
    background-image: conic-gradient(#FFE55A 0deg, #FFE55A 205.2deg,
            #9EE58C 205.2deg, #9EE58C 275.2deg,
            #E7A7F1 275.2deg, #E7A7F1 318.4deg,
            #FFC289 318.4deg, #FFC289 343.6deg,
            #ACAAFF 343.6deg, #ACAAFF 354.4deg,
            #FDA18D 354.4deg);
    height: 170px;
    width: 170px;
    aspect-ratio: 1;
    border-radius: 50%;
}

#country-info-div {
    border-radius: 24px 24px 0 0;
}

#recommend-title-div {
    width: max-content;
    margin: 0 auto;
}

#country-heading {
    font-size: 20px;
}

#country-heading-place {
    font-family: 'Righteous', sans-serif;
    font-size: 64px;
    line-height: 70px;
}

#results-image {
    width: 100%;
    margin: 40px 0;
    border-radius: 24px;
}

#country-highlights-div {
    border-radius: 0 0 24px 24px;
}

#country-highlights-div>h2,
#country-highlights-div>p {
    color: white;
}

#country-highlights-div>h2 {
    font-size: 36px;
}

#country-highlights-div>p {
    margin-top: 8px;
}

#country-map-div {
    margin: 0 auto;
    margin-top: 40px;
}

#map {
    background-color: #FC7070;
    height: 450px;
    border: 3px solid #FFFFFF;
    border-radius: 24px;
    -webkit-border-radius: 24px;
    -moz-border-radius: 24px;
    -o-border-radius: 24px;
    position: relative;
    pointer-events: all;
    overflow: hidden;
}

/* Overlay inset shadow technique adapted from https://bavotasan.com/2011/adding-inset-shadow-to-image-css3/ */
#map::before {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    box-shadow: inset 2px -2px 18px 8px rgba(0, 0, 0, 0.2);
    z-index: 2;
    pointer-events: none;
}

#highlight-content-div {
    padding-left: 40px;
    padding-right: 40px;
    padding-top: 30px;
}

#highlight-title {
    font-weight: 700;
    font-size: 24px;
    margin-bottom: 15px;
}

#highlight-photo-div {
    display: flex;
    flex-wrap: wrap;
    padding-top: 30px;
    border-radius: 0 0 24px 24px;
}

.highlight-photo {
    width: 25%;
    height: auto;
}

#highlight-photo-1 {
    border-radius: 0 0 0 24px;
}

#highlight-photo-4 {
    border-radius: 0 0 24px 0;
}

#start-again-button-div p {
    margin-bottom: 20px;
    font-weight: 600;
}





/* Media Queries */

/* Medium Devices */
@media (max-width: 992px) {
    #answer-div {
        width: 80%;
    }

    #personality-div,
    #country-highlights-div,
    #country-info-div {
        margin-left: 60px;
        margin-right: 60px;
    }

    #personality-text-div {
        width: 100%;
        order: 2;
    }

    #personality-stats-div {
        width: 100%;
    }

    #personality-heading {
        margin-bottom: 20px;
    }

    #personality-div-flex {
        justify-content: center;
        row-gap: 20px;
    }
}

@media (max-width: 768px) {
    .highlight-photo {
        width: 50%;
    }

    #highlight-photo-1 {
        border-radius: 0;
    }

    #highlight-photo-3 {
        border-radius: 0 0 0 12px;
    }

    #highlight-photo-4 {
        border-radius: 0 0 12px 0;
    }

    #personality-div,
    #country-highlights-div,
    #country-info-div {
        margin-left: 40px;
        margin-right: 40px;
    }

    #country-highlights-div {
        padding-bottom: 40px;
    }
}

/* Small Devices */
@media (max-width: 576px) {
    /* Main Elements */

    #logo-div img {
        width: 155px;
        margin-top: 30px;
    }

    #cloud-div {
        height: 280px;
        background-image: url("../images/clouds_sml.png");
        background-position: center bottom;
        background-position-y: 20px;
        background-repeat: no-repeat;
        background-size: cover;
    }

    /* Welcome */
    #welcome-div {
        width: 90%;
        margin-top: 30px;
    }

    #welcome-div>h1 {
        margin-bottom: 15px;
    }

    #start-button-div {
        margin: 30px 0 0 0;
    }

    /* Game */
    #answer-div {
        width: 85%;
    }

    #progress-div {
        margin-top: 30px;
        width: 85%;
        padding-bottom: 40px;
    }

    #question-text {
        font-size: 20px;
        margin-bottom: 30px;
    }

    .btn-choice {
        width: 100%;
        height: initial;
        padding: 15px;
    }

    #restart-button-div {
        margin-top: 40px;
    }

    /* Results */
    #personality-div,
    #country-highlights-div,
    #country-info-div {
        margin-left: 20px;
        margin-right: 20px;
    }

    #highlight-content-div {
        padding-left: 20px;
        padding-right: 20px;
    }

    #personality-div {
        padding: 20px;
    }

    #personality-div,
    #country-info-div {
        margin-top: 30px;
    }

    #country-info-div {
        padding: 30px 20px;
    }

    #country-highlights-div {
        padding: 30px 20px 20px 20px;
    }

    #results-image {
        margin: 30px 0;
    }

    #personality-heading,
    #country-highlights-div>h2 {
        font-size: 24px;
    }

    #country-highlights-div>h2 {
        margin-top: 10px;
    }

    #country-heading {
        font-size: 14px;
    }

    #country-heading-place {
        font-size: 36px;
        line-height: 36px;
    }


    #start-again-button-div {
        margin-top: 40px;

    }
}

/* Smallest devices */
@media (max-width: 450px) {
    #cloud-div {
        height: 250px;
    }




}

/* DOM Manipulation Classes */

.selected {
    background-color: cyan;
}

.hidden {
    display: none;
}

